--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,25 +14,21 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='https://placehold.it/550x350', alt='')
+          img.thumbnail(src="../static/images/thumbnail/mstselfie.png", alt="Matthew S. Turner")
         .dev-intro-box
 
-          //- Replace with your name
-          h5 Name
+          h5 Matthew S. Turner
 
-          //- Replace with description of who you are, what you do, and why you are so awesome
-          p Description
+          p I am a Full Stack JavaScript developer looking for a company that will utilize my talents by challenging me daily with new programming problems to overcome.  I have been a small business owner; I've worked in Private Lending and I've been an Engergy Consultant as well.  These unique combination of my careers offer any company a skillset second to none.  I've managed a staff of 50+ employees.  I've done B2C and B2B sales.  I've worked closley with Real Estate Investors to fund there investments.  I've managed and cultivated thousands of clients.  Let me show you how I can help your company achieve it's goals.
 
-          //- Add path from your '/about' route handler to the href below
-          a(href='') Learn More &rarr;
+          a(href="/about", class="btn-link") Learn More &rarr;
 
     .wrapper
       .header
         .header-info-box
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
-          //- Replace with your name — this is for the mobile layout
-          span Name
+          span Matthew S. Turner
 
       block content
 
