--- a/views/about.pug
+++ b/views/about.pug
@@ -1,4 +1,4 @@
-extends layout.pug
+extends layout
 
 block content
 
@@ -11,23 +11,23 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
-        h1 Name
+        h1 Matthew S. Turner
 
-        //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
 
 
         .about-bio
 
-          //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p I'm a former business owner and energy consultant with a creative attitude to problem solve.  In my previous position at FOREnergy, I solved client's problems by tailoring our service and products to meet their needs.  Some clients are looking to stabalize rising energy costs.  Other clients feel that their home's temperature is uncommfortable.  Listening to each clients problem and matcing them with a specific solution to solve it is the key to creating a life long client.
+          
+          p I owned and operated a residential cleaning service for 14 years.  In that time, I grew my franchise to 3 largest in the nation.  The key to our success was our people.  I always took the approach that my employees were family and that families share.  I introduced a profit sharing model based on client retention and recruitment.  This lead to an annual growth rate of 5% - 10%.  When I sold the business in 2018, our annual revenue was 1.4 million per year with a profit margin of 13%.
+
+          p I'm looking forward to the opportunity to help your organization solve it's challenges.  Thank you for your consideration.
 
 
       .skills-contact-box.box
         h6 Skills
 
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
           li HTML
           li CSS
@@ -43,15 +43,13 @@ block content
 
         h6 Contact Info
 
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li 480-567-4900
+          li
+            a(href="mailto:matthew.turner.480@gmail.com") matthew.turner.480@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href="https://www.linkedin.com/in/matthew-turner-a62b417/", target="_blank") LinkedIn
+        a.btn-link(href="https://github.com/msturn2", target="_blank") GitHub
 
     nav.nav
       a(href='/')
