--- a/views/project.pug
+++ b/views/project.pug
@@ -1,4 +1,4 @@
-extends layout.pug
+extends layout
 
 block content
 
@@ -11,33 +11,23 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .project-info-box.box
 
-        //- Use the info in your data file and the comments below to complete this template
+        h1= project.project_name
 
-        //- Use interpolation to dynamically add the project title
-        h1 Project Name
-
-        //- Use interpolation to dynamically add the project description
-        p Description
+        p= project.description
 
       .project-tech-links-box.box
         h6 Technologies
         ul
+          each technology in project.technologies
+            li= technology
 
-          //- Use an `each` iterator and interpolation to dynamically replace the li tags below with the technologies listed for this project
-          li HTML
-          li CSS
-          li JavaScript
+        a.btn-link(href=`${project.live_link}`, target="_blank") Live Demo
+        a.btn-link(href=`${project.github_link}`, target="_blank") GitHub Repo
 
-        //- Add the href values to the links below
-        a.btn-link(href='') Live Demo
-        a.btn-link(href='') GitHub Repo
+    .project-img-box.box.color
 
-    .project-img-box.box
-
-      //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
-      img.project-img(src='https://placehold.it/1200x550', alt='')
-      img.project-img(src='https://placehold.it/1200x550', alt='')
-      img.project-img(src='https://placehold.it/1200x550', alt='')
+      each image in project.images.image_urls 
+        img.project-img(src=`${image}`, alt=`${project.project_name}`)
 
     nav.nav
       a(href='/')
